<resources>
    <string name="app_name">CoCiekawego</string>
    <string name="google_app_id">1301</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ustawienia</string>


    ///app bar categories
    <string name="public_transport">Transport publiczny</string>
    <string name="parking">Parking P+R</string>
    <string name="sport_facilities">Obiekty sportowe</string>
    <string name="veturilo">Stacje Veturilo</string>
    <string name="entertainment">Rozrywka</string>
    <string name="swimming_pools">Pływalnie</string>
    <string name="theatres">Teatry</string>
    <string name="restaurant">Restauracje</string>
    <string name="preferences">Preferencje</string>
    <string name="account">Moje konto</string>
    <string name="download_data">Pobierz dane dla tego obszaru</string>
    <string name="begining_text">Aplikacja CoCiekawego zrealizowana jako projekt zaliczeniowy z przedmiotu UTE.
    Pozwala znaleźć ciekawe miejsca w pobliżu użytkownika oraz podzielić się swoimi zainteresowaniami ze znajomymi.

    Skład zespołu projektowego:
        Krystian Powójski
        Ewelina Żochowska

    Semestr: 16L
    </string>



    <string name="gps_net_not_avaliable">Lokalizacja nie jest włączona</string>
</resources>
